[package]
name = "frabjous-bitcoin"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.4"
ctrlc = "3.2.1"
secp256k1 = { version = "0.22.1", features = ["global-context"], optional = true }

[features]
use-libsecp256k1 = ["secp256k1"]

[profile.dev]
# opt-level = 1
overflow-checks = false

[[bin]]
name = "frabjous-bitcoin"
path = "src/main.rs"
